force-app/main/default/objects/DBM_Report_Grouping__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>custom</fullName>
                <default>true</default>
                <label>custom</label>
            </value>
            <value>
                <fullName>user</fullName>
            </value>
            <value>
                <fullName>sobject</fullName>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
            <value>
                <fullName>months</fullName>
            </value>
            <value>
                <fullName>quarters</fullName>
            </value>
            <value>
                <fullName>priorities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>