force-app/main/default/objects/DBM_Report_Grouping__c/fields/Display_as_Link__c.field-meta.xml
<CustomField>
    <fullName>Display_as_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display as Link</label>
    <type>Checkbox</type>
</CustomField>