force-app/main/default/objects/DBM_Report_Grouping__c/fields/Enumerate_Entries__c.field-meta.xml
<CustomField>
    <fullName>Enumerate_Entries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enumerate Entries</label>
    <type>Checkbox</type>
</CustomField>