force-app/main/default/objects/DBM_Report_Grouping__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <label>Report</label>
    <referenceTo>DBM_Report__c</referenceTo>
    <relationshipLabel>DBM Report Groupings</relationshipLabel>
    <relationshipName>DBM_Report_Groupings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>